--- a/Source/Enter.UI/Components/Modal/EntMessageBox.razor
+++ b/Source/Enter.UI/Components/Modal/EntMessageBox.razor
@@ -42,10 +42,11 @@
     {
         await Instance.CloseAsync(ModalResult.Ok(true));
     }
-    
 
-    public void Dispose()
+
+    public override void Dispose()
     {
+        
     }
 
 }
