--- a/Source/Enter.UI/Components/Overlay/EntOverlay.razor
+++ b/Source/Enter.UI/Components/Overlay/EntOverlay.razor
@@ -1,6 +1,13 @@
 ﻿@namespace Enter.UI.Components
 @inherits EntComponentBase
 
+@code {
+    public override void Dispose()
+    {
+        
+    }
+}
+
 
 
 @if (Visible)
