--- a/Source/Enter.UI/Components/Popover/EntPopover.razor
+++ b/Source/Enter.UI/Components/Popover/EntPopover.razor
@@ -68,4 +68,9 @@
         await EntPopoverService.UpdateParameterAsync(_id,_popoverClass, Open);
     }
 
+    public override void Dispose()
+    {
+        
+    }
+
 }
