--- a/Source/Enter.UI/Components/Theme/EntThemeProvider.razor
+++ b/Source/Enter.UI/Components/Theme/EntThemeProvider.razor
@@ -121,5 +121,9 @@
     [Parameter]
     public int DrawerDefaultWidth { get; set; } = 260;
 
+    public override void Dispose()
+    {
+        
+    }
 
 }
