--- a/Source/Enter.UI/Components/Toolbar/EntToolbarItem.razor
+++ b/Source/Enter.UI/Components/Toolbar/EntToolbarItem.razor
@@ -29,4 +29,9 @@
     [Parameter]
     public object? Icon { get; set; } = string.Empty;
 
+    public override void Dispose()
+    {
+        
+    }
+
 }
