--- a/Source/Enter.UI/Components/Inputs/EntInputGroup.razor
+++ b/Source/Enter.UI/Components/Inputs/EntInputGroup.razor
@@ -29,5 +29,9 @@
 
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
+    
+    public override void Dispose()
+    {
+    }
 
 }
