--- a/Source/Enter.UI/Components/List/EntListItem.razor
+++ b/Source/Enter.UI/Components/List/EntListItem.razor
@@ -14,4 +14,9 @@
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
+    public override void Dispose()
+    {
+        
+    }
+
 }
