--- a/Source/Enter.UI/Components/Utilities/Division/EntDivision.razor
+++ b/Source/Enter.UI/Components/Utilities/Division/EntDivision.razor
@@ -11,4 +11,9 @@
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
+    public override void Dispose()
+    {
+        
+    }
+
 }
