--- a/Source/Enter.UI/Components/Icon/EntIcon.razor
+++ b/Source/Enter.UI/Components/Icon/EntIcon.razor
@@ -10,13 +10,13 @@
     
       if (icon.TrimStart().StartsWith("<"))
         {
-            <svg class="@RootCss"  viewBox="@ViewBox" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <svg @onclick="Click" class="@RootCss"  viewBox="@ViewBox" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 @((MarkupString)icon) 
             </svg>
         }
         else
         {
-            <i class="@RootCss  @icon"></i> 
+            <i @onclick="Click"  class="@RootCss  @icon"></i> 
         }
     
 }
