--- a/Source/Enter.UI/Components/Tabs/EntTab.razor
+++ b/Source/Enter.UI/Components/Tabs/EntTab.razor
@@ -19,7 +19,7 @@
                         @if (Closeable)
                         {
                             <div @onclick="() => OnTabClose(tabPanels.Id)" class="ent-tab-close">
-                                <EntIcon Icon="EntIconName.Remove" IconSize="EntIconNameize.Default" IconStyle="EntIconStyle.Light"/>
+                                <EntIcon Icon="EntIconName.Remove" IconSize="EntIconSize.Default" IconStyle="EntIconStyle.Light"/>
                             </div>
                         }
                     </li>
