--- a/Source/Enter.UI/Styles/components/_components.scss
+++ b/Source/Enter.UI/Styles/components/_components.scss
@@ -1,4 +1,26 @@
-﻿@import "ent_button.component";
+﻿@keyframes anim-ent-btn-spin
+{
+  0%{
+    animation-timing-function:cubic-bezier(0.5856,0.0703,0.4143,0.9297);
+    transform:rotate(0);
+  }
+  100%{
+    transform:rotate(900deg)
+  }
+}
+
+@keyframes anim-ent-btn-spin-fast
+{
+  0%{
+    animation-timing-function:cubic-bezier(0.5856,0.0703,0.4143,0.9297);
+    transform:rotate(0);
+  }
+  100%{
+    transform:rotate(1800deg)
+  }
+}
+
+@import "ent_button.component";
 @import "ent_messagebox.component";
 @import "ent_tab.component";
 @import "ent_toolbar.component";
